Also enables the Initialize menu when the partition is also a device: Hopefully should fix #7572.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41842 a95241bf-73f2-0310-859d-f6bbb57e9c96